Introduce Protocol Concept to Merlin Deployment (#273)
* Add protocol to model_endpoint and version_endpoint

* Refactor version_endpoint_service.go


* Handle protocol in version endpoint creation


* Handle version endpoint url creation for upi v1 / grpc


* Add handling of upi v1 protocol in templater


* Add test for custom model


* Refactor env var


* Allow env vars in standard transformer to be passed from users


* Add CaraML env vars


* Add test for transformer with upiv1 protocol


* Fix db schema


* Add db schema

* Remove unused model type


* Update go.mod and go.sum


* Update services mocks


* Refactor model endpoint service


* Regenerate storage mocks


* Handle no scheme in version endpoint URL


* Change argument ordering in model_endpoint_storage.Save method


* Refactor model endpoint service implementation


* Add protocol to ModelEndpoint schema in swagger.yaml

* Extract redundant URL parsing codes to ParsedURL


* Update assertElementMatchFeatureTableMetadata
